rhacm-policies/base/monitor/container-crash-loop-backoff.yaml
---
apiVersion: v1
kind: Pod
status:
  containerStatuses:
    - started: false
      state:
        waiting:
          reason: CrashLoopBackOff
...
