rhacm-policies/base/monitor/container-image-pull-backoff.yaml
---
apiVersion: v1
kind: Pod
status:
  containerStatuses:
    - started: false
      state:
        waiting:
          reason: ErrImagePull
---
apiVersion: v1
kind: Pod
status:
  containerStatuses:
    - started: false
      state:
        waiting:
          reason: ImagePullBackOff
...
