rhacm-policies/base/monitor/container-oom-killed.yaml
---
apiVersion: v1
kind: Pod
status:
  containerStatuses:
    - started: false
      lastState:
        terminated:
          reason: OOMKilled
...
