rhacm-policies/base/monitor/rhacs-central-status.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-db
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-db
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-v4-db
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-v4-indexer
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-v4-matcher
  namespace: stackrox
status:
  conditions:
    - status: "True"
      type: Available
...
