rhacm-policies/base/monitor/rhacs-secured-cluster-status.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor
  namespace: stackrox
status:
  conditions:
    - type: Available
      status: "True"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-control
  namespace: stackrox
status:
  conditions:
    - type: Available
      status: "True"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: collector
  namespace: stackrox
status:
  numberMisscheduled: 0
...
