rhacm-policies/base/monitor/route-status.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
status:
  ingress:
    - conditions:
        - type: Admitted
          status: "False"
...
